--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -5,7 +6,7 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
     <meta charset="UTF-8" />
-{#    <meta name="viewport" content="width=device-width, initial-scale=1" />#}
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="{% static 'css/blog.css' %}" rel="stylesheet">
   </head>
 
@@ -16,7 +17,21 @@
   </div>
   <div id="sidebar">
     <h2>My blog</h2>
-    <p>This is my blog.</p>
+    <p>
+      This is my blog.
+      I've written {% total_posts %} posts so far.
+    </p>
+    <h3>Latest posts</h3>
+    {% show_latest_posts 3 %}
+    <h3>Most commented posts</h3>
+    {% get_most_commented_posts as most_commented %}
+    <ul>
+      {% for post in most_commented %}
+      	<li>
+        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
   </div>
 </body>
 
