--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% load blog_tags %}
 
 {% block title %}{{ post.title }}{% endblock %}
 
@@ -7,10 +8,27 @@
   <p class="date">
     Pusblished {{ post.publish }} by {{ post.author }}
   </p>
-  {{ post.body|linebreaks }}
+  {{ post.body|markdown }}
   <p>
     <a href="{% url 'blog:post_share' post.id %}">Share this post</a>
   </p>
+  <p class="tags">Tags:
+      {% for tag in post.tags.all %}
+      	<a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+          {{ tag.name }}
+        </a>
+        {% if not forloop.last %}, {% endif %}
+      {% endfor %}
+  </p>
+
+  <h2>Similiar posts</h2>
+  {% for post in similar_posts %}
+    <p>
+      <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+    </p>
+  {% empty %}
+    There are no similar posts yet.
+  {% endfor %}
 
   {% with comments.count as total_comments %}
     <h2>
